<resources>
    <string name="app_name">공짜</string>
    <string name="receive_message">com.dongkyoo.gongzza.RECEIVE_MESSAGE</string>

    <string name="alarm_preference_title">알람</string>
    <string name="board_title">게시판</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>
    <string name="participants_list">참여자목록</string>
    <string name="enroll">참가</string>
    <string name="leave">탈퇴</string>
    <string name="enroll_confirm_title">참가하시겠습니까?</string>
    <string name="leave_confirm_title">탈퇴하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="modification">수정</string>
    <string name="hint_title">제목을 입력하세요</string>
    <string name="hint_content">내용을 입력하세요</string>
    <string name="hint_num_of_participants">최대 참여자 수를 입력하세요</string>
    <string name="submit">확인</string>

</resources>
