<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin3"
    tools:context=".post.write.WritePostActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"/>

        <EditText
            android:id="@+id/content_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_content"
            android:layout_marginTop="@dimen/margin2"/>

        <EditText
            android:id="@+id/num_of_participants_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="@dimen/margin2"
            android:hint="@string/hint_num_of_participants"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin2">

            <TextView
                android:id="@+id/meet_datetime_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="만나는 시간을 설정하세요"/>

            <Button
                android:id="@+id/modify_meet_datetime_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modification"/>

        </LinearLayout>

        <com.dongkyoo.gongzza.customViews.hashTagRecyclerView.HashTagRecyclerView
            android:id="@+id/hash_tag_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/margin2"/>

</LinearLayout>